--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   gateway:
     build:
-      context: ./gateway  # Папка с Dockerfile гейтвея
+      context: ./gateway  
     ports:
-      - "8000:8000"  # Проброс порта гейтвея
+      - "8000:8000"  
     networks:
       - app-network
     depends_on:
@@ -11,45 +11,35 @@ services:
       - inventory_service
       - riddle_service
       - game_service
-      - laken_service
+      - lake_service
 
   auth_service:
     build:
       context: ./auth_service
-    ports:
-      - "5000:5000"
     networks:
       - app-network  
 
   game_service:
     build:
       context: ./game_service
-    ports:
-      - "5001:5000"
     networks:
       - app-network
 
   inventory_service:
     build:
       context: ./inventory_service
-    ports:
-      - "5002:5000"
     networks:
       - app-network
 
-  laken_service:
+  lake_service:
     build:
-       context: ./laken_service
-    ports:
-     - "5003:8004" 
+       context: ./lake_service 
     networks:
       - app-network     
 
   riddle_service:
     build:
       context: ./riddle_service
-    ports:
-      - "5004:8003"
     networks:
       - app-network  
 
