Сделал шаблон на который необходимо использовать как образец

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,63 @@
+version: '3'
+
 services:
   gateway:
-    build:
-      context: ./gateway  
+    build: 
+      context: ./gateway
+      dockerfile: Dockerfile
     ports:
-      - "8000:8000"  
-    networks:
-      - app-network
+      - "8000:8000"
     depends_on:
-      - auth_service
-      - inventory_service
-      - riddle_service
-      - game_service
-      - lake_service
-
-  auth_service:
-    build:
-      context: ./auth_service
+      - storage-service
+      - inventory-service
+      - riddle-service
+      - location-service
     networks:
-      - app-network  
+      - game-network
 
-  game_service:
-    build:
-      context: ./game_service
+  storage-service:
+    build: 
+      context: ./storage_service
+      dockerfile: Dockerfile
+    ports:
+      - "8001:8001"
     networks:
-      - app-network
+      - game-network
 
-  inventory_service:
-    build:
+  inventory-service:
+    build: 
       context: ./inventory_service
+      dockerfile: Dockerfile
+    ports:
+      - "8002:8002"
+    depends_on:
+      - storage-service
     networks:
-      - app-network
+      - game-network
 
-  lake_service:
-    build:
-       context: ./lake_service 
-    networks:
-      - app-network     
-
-  riddle_service:
-    build:
+  riddle-service:
+    build: 
       context: ./riddle_service
+      dockerfile: Dockerfile
+    ports:
+      - "8003:8003"
+    depends_on:
+      - storage-service
     networks:
-      - app-network  
+      - game-network
+
+  location-service:
+    build: 
+      context: ./location_service
+      dockerfile: Dockerfile
+    ports:
+      - "8004:8004"
+    depends_on:
+      - storage-service
+    networks:
+      - game-network
 
 networks:
-  app-network:
-    driver: bridge    
+  game-network:
+    driver: bridge
 
