--- a/riddle_service/requirements.txt
+++ b/riddle_service/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.98.0
-uvicorn==0.20.0
+fastapi==0.104.1
+uvicorn==0.24.0
+httpx==0.25.2
+pydantic==2.5.2
 passlib==1.7.4
-httpx==0.23.0
 jinja2
 python-multipart
